fix: hide the Navbar overflow to avoid weird resizing issues when rotating phone

--- a/src/layout/Navbar/Navbar.styles.scss
+++ b/src/layout/Navbar/Navbar.styles.scss
@@ -4,6 +4,7 @@
   width: 100%;
   align-items: flex-start;
   justify-content: space-between;
+  overflow-x: hidden;
 
   &__list {
     display: flex;
