--- a/src/pages/Movie/Movie.styles.scss
+++ b/src/pages/Movie/Movie.styles.scss
@@ -17,18 +17,16 @@
   }
 
   &__button {
-    background-color: var(--clr-main);
+    background-color: var(--clr-medium-blue);
     border: none;
     font-weight: 600;
-    color: var(--clr-dark-gray);
+    color: rgb(64, 70, 73);
     padding: 0.375rem 1rem;
     cursor: pointer;
 
     &.active {
-      background-color: var(--clr-medium-blue);
-      text-decoration: underline;
-      text-underline-offset: 0.1875rem;
-      color: rgb(64, 70, 73);
+      background-color: var(--clr-main);
+      color: var(--clr-dark-blue);
     }
   }
 }
